# StructuraLudis

./: .claudecodeignore  .env  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  Dockerfile.prod  Makefile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 26a7eae181ef_initial_schema.py  672bafad36f6_add_safety_tools_table.py  7adb0fe30183_add_birth_date_to_users.py  7ef43afa9420_add_privacy_accepted_at_to_users.py  803efb49faa4_add_region_to_exhibitions.py  84513575bcb3_add_i18n_jsonb_fields_for_translations.py  8a77f2101348_add_session_reporting_fields.py  a8323b30eb7f_add_moderation_comments_and_changes_.py  acb21cf6f99d_add_notifications_table.py  b3d4e5f6a789_add_email_verification.py  c4d5e6f7g890_add_pending_email_change.py  c8eb4f8f5fb5_add_table_prefix_to_zones.py  ca3019a42edb_initial_schema.py  cef8a1899aac_add_zones_physical_tables_rename_game_.py  d5e6f7g8h901_add_password_reset.py  e6f7g8h9i012_add_user_exhibition_roles.py  f6d350b3f7ac_add_registration_and_language_config_to_.py  f7g8h9i0j123_add_created_by_to_exhibitions.py  g8h9i0j1k234_add_partner_validation_to_zones.py  h9i0j1k2l345_rename_partner_validation_to_moderation.py  (+5 more)
backend/app/: main.py  schemas.py
backend/doc/: TODO.md  database-schema.mmd  session-workflow.md  session-workflow.mmd
backend/fixtures/: grog_curated_slugs.txt  grog_top_100.json
backend/scripts/: generate_grog_fixtures.py  init_super_admin.py  seed_db.py
backend/tests/: conftest.py  test_i18n.py  test_notification.py
(+235 files in other folders)
